Fix history dropdown position and width on mobile

--- a/core/app/shell/src/themes/suite8/css/components/_dropdown-mobile.scss
+++ b/core/app/shell/src/themes/suite8/css/components/_dropdown-mobile.scss
@@ -82,7 +82,7 @@
       .action-history .dropdown-menu {
         width: 280px;
         position: absolute;
-        left: -10em;
+        left: -13em;
       }
     }
   }
@@ -95,9 +95,9 @@
         padding: 0 0.4rem!important;
       }
       .action-history .dropdown-menu {
-        width: 224px;
+        width: 280px;
         position: absolute;
-        left: -7em;
+        left: -13em;
         .new-list-item {
           padding-left: 0.44rem;
         }
